# lara-app/storage/api-docs/api-docs.json
@@ -209,6 +209,35 @@
                 }
             }
         },
+        "/api/requests/{requestId}": {
+            "get": {
+                "tags": [
+                    "Requests"
+                ],
+                "summary": "Get specific request by id",
+                "operationId": "6e247c25a53513fb5a2d97a8f2583b41",
+                "parameters": [
+                    {
+                        "name": "requestId",
+                        "in": "path",
+                        "description": "ID of the request",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "404": {
+                        "description": "Request not found"
+                    }
+                }
+            }
+        },
         "/api/requests/create": {
             "post": {
                 "tags": [
